log
Sun 19 May 2024 01:11:25 AM UTC: 
 tests:  0|5
total_score: 0/70
547db23
Sun 19 May 2024 01:22:28 AM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  2|4
total_score: 15/70
72eab3b
Sun 19 May 2024 01:23:28 AM UTC: 
 sudoku.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:73:1: error: control reaches end of non-void function [-Werror=return-type]
   73 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
89b9b5b
Sun 19 May 2024 01:24:29 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
5688011
Sun 19 May 2024 01:25:30 AM UTC: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  2|4
total_score: 15/70
16484a0
Sun 19 May 2024 01:26:01 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
d70ef12
Sun 19 May 2024 01:27:16 AM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  4|3
total_score: 30/70
aca6f7b
Sun 19 May 2024 01:27:42 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
02e6a2e
Sun 19 May 2024 01:35:38 AM UTC: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:64:29: error: ‘sudo’ undeclared (first use in this function)
   64 |                   col_aux[n-sudo[col][filaa]++;]
      |                             ^~~~
sudoku.c:64:29: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:64:39: error: ‘filaa’ undeclared (first use in this function); did you mean ‘fila’?
   64 |                   col_aux[n-sudo[col][filaa]++;]
      |                                       ^~~~~
      |                                       fila
sudoku.c:64:47: error: expected ‘]’ before ‘;’ token
   64 |                   col_aux[n-sudo[col][filaa]++;]
      |                                               ^
      |                                               ]
sudoku.c:64:49: error: expected ‘;’ before ‘}’ token
   64 |                   col_aux[n-sudo[col][filaa]++;]
      |                                                 ^
      |                                                 ;
   65 |                }
      |                ~                                 
sudoku.c:48:35: error: unused variable ‘cuad_aux’ [-Werror=unused-variable]
   48 |    int fila_aux[10], col_aux[10], cuad_aux[10];
      |                                   ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ecbdd19
Sun 19 May 2024 01:36:19 AM UTC: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:64:47: error: expected ‘]’ before ‘;’ token
   64 |                   col_aux[n->sudo[col][fila]++;
      |                                               ^
      |                                               ]
sudoku.c:64:26: error: value computed is not used [-Werror=unused-value]
   64 |                   col_aux[n->sudo[col][fila]++;
      |                   ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
   65 |                }
      |                ~          
sudoku.c:64:48: error: expected ‘;’ before ‘}’ token
   64 |                   col_aux[n->sudo[col][fila]++;
      |                                                ^
      |                                                ;
   65 |                }
      |                ~                                
sudoku.c:48:35: error: unused variable ‘cuad_aux’ [-Werror=unused-variable]
   48 |    int fila_aux[10], col_aux[10], cuad_aux[10];
      |                                   ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
88e0280
Sun 19 May 2024 01:36:29 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:64:47: error: expected ‘]’ before ‘;’ token
   64 |                   col_aux[n->sudo[col][fila]++;
      |                                               ^
      |                                               ]
sudoku.c:64:26: error: value computed is not used [-Werror=unused-value]
   64 |                   col_aux[n->sudo[col][fila]++;
      |                   ~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
   65 |                }
      |                ~          
sudoku.c:64:48: error: expected ‘;’ before ‘}’ token
   64 |                   col_aux[n->sudo[col][fila]++;
      |                                                ^
      |                                                ;
   65 |                }
      |                ~                                
cc1: all warnings being treated as errors
Compilation failed
2db99d5
